welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:34: error: value || is not a member of java.awt.Color
    if ((getCouleurSol()) == ((Color.pink) || (Color.orange))) {
                                           ^